fixed conflicts